# vpml

./: .gitignore  README.md  Untitled  fh_benchmarks_2412_07073_jax.py  fh_core_jax.py  fh_nonlinear_sim_jax.py  pyproject.toml  requirements.txt
benchmarks/: __init__.py  compare_two_vpml_runs.py  comparison_linear_damping.py  comparison_two_vpml_runs.py  eval.py  eval_nv_sweep.py  fh_benchmarks_2412_07073_jax.py  fh_ml_tail_closure_train_jax.py  fh_nonlinear_sim_jax.py  job_fig2_cpu_timed.sh  job_fig3_cpu_timed.sh  job_fig3_gpu_timed.sh  job_fig4_cpu_timed.sh  job_linear_landau_cpu_timed.sh  run_all_benchmarks.sh  run_fig3_cpu_timed.sh  run_fig_cpu_timed.sh  run_linear_landau_suite.sh  run_nv_sweep.sh  run_nv_sweep_higher_order_hermite_fixed_ratio.sh  run_nv_sweep_online_rollout.sh  run_nv_sweep_single_qloss.sh  run_nv_sweep_single_qloss_fixed_ratio.sh  test_jit_speed.py  train.sh
model/: __init__.py  eval.py  eval_nv_sweep.py  model.py
model/train/: __init__.py  data.py  run_nv_sweep_higher_order_hermite_fixed_ratio.sh  run_nv_sweep_online_rollout.sh  run_nv_sweep_online_rollout_q_hybrid_fixed_ratio.sh  run_nv_sweep_single_qloss.sh  run_nv_sweep_single_qloss_fixed_ratio.sh  train.py
tests/: test_core.py  test_eval_pipeline.py  test_learned_interface_closure.py  test_metrics.py  test_nonlinear.py  test_nv_sweep.py  test_visualization.py
vpml/: __init__.py  core.py  jax_runtime.py  linear_landau.py  nonlinear_landau.py  physical_grid.py
vpml/metrics/: __init__.py  early_growth.py  field_error.py
vpml/visualization/: __init__.py  benchmarks.py  common.py  (+3 more)
